# PDFViewer

./: README.md  index.html  main.py  pyproject.toml
static/: script.js  styles.css
templates/: index.html  pdf_viewer.html  script.jl  scrolling.html  style.css  tourn.html
