[tool.poetry]
name = "pdfviewer"
version = "0.1.0"
description = "PDFviewing and note-taking."
authors = ["bogdankjastrzebski"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.23.7"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
